# logos-evm-eth-rpc-module

./: CMakeLists.txt  README.md  flake.nix  index.html  metadata.json
.github/workflows/: doctests.yml
docs/: specs.md
doctests/: eth-rpc-module-runtime.test.yaml
doctests/outputs/: eth-rpc-module-runtime.md
main/: index.html
main/macos-latest/: index.html
main/ubuntu-latest/: index.html
pr-3/: index.html
pr-3/macos-latest/: index.html
pr-3/ubuntu-latest/: index.html
pr-4/: index.html
pr-4/macos-latest/: index.html
pr-4/ubuntu-latest/: index.html
pr-5/: index.html
pr-5/macos-latest/: index.html
pr-5/ubuntu-latest/: index.html
rust-lib/: Cargo.toml
rust-lib/src/: glue.rs  lib.rs  proxy.rs  rpc.rs
